Fix bindings for splits

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -25,8 +25,8 @@ bind-key -r -T prefix l select-pane -R
 bind-key C-l send-keys C-l \; clear-history
 
 # Bindings for splitting
-bind | split-window-h
-bind - split-window-v
+bind-key -r -T prefix | split-window -h
+bind-key -r -T prefix - split-window -v
 unbind '"'
 unbind %
 
