Update tmux to hook into the MacOS clipboard

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -16,13 +16,14 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 # Add keybindings for pane movement
-bind-key -r -T prefix k select-pane -U
-bind-key -r -T prefix j select-pane -D
-bind-key -r -T prefix h select-pane -L
-bind-key -r -T prefix l select-pane -R
+bind-key -r -T prefix C-k select-pane -U
+bind-key -r -T prefix C-j select-pane -D
+bind-key -r -T prefix C-h select-pane -L
+bind-key -r -T prefix C-l select-pane -R
+unbind-key -T prefix l
 
 # Bindings for history management
-bind-key C-l send-keys C-l \; clear-history
+bind-key -r -T prefix BSpace send-keys C-l \; clear-history
 
 # Bindings for splitting
 bind-key -r -T prefix | split-window -h
@@ -30,10 +31,11 @@ bind-key -r -T prefix - split-window -v
 unbind '"'
 unbind %
 
+# Allow copy-n-paste to system clipboard
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
 # Visual Styling #######################################################################################################
-######################
-### DESIGN CHANGES ###
-######################
 
 # panes
 set -g pane-border-fg black
