Update tmux keybindings

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,6 +1,5 @@
 # Basic Setup ##########################################################################################################
 
-set -g default-terminal "screen-256color"
 setw -g mode-keys vi
 set -g mouse on
 
@@ -13,27 +12,32 @@ bind C-f send-prefix
 
 # Reload config file with prefix-r
 unbind r
-bind r source-file ~/.tmux.conf
+bind-key r source-file ~/.tmux.conf
 
 # Add keybindings for pane movement
-bind-key -r -T prefix C-k select-pane -U
-bind-key -r -T prefix C-j select-pane -D
-bind-key -r -T prefix C-h select-pane -L
-bind-key -r -T prefix C-l select-pane -R
-unbind-key -T prefix l
+unbind-key C-l
+
+bind-key -r C-k select-pane -U
+bind-key -r C-j select-pane -D
+bind-key -r C-h select-pane -L
+bind-key -r C-l select-pane -R
 
 # Bindings for history management
-bind-key -r -T prefix BSpace send-keys C-l \; clear-history
+bind-key BSpace send-keys C-l \; clear-history
 
 # Bindings for splitting
-bind-key -r -T prefix | split-window -h
-bind-key -r -T prefix - split-window -v
+bind-key | split-window -h
+bind-key - split-window -v
 unbind '"'
 unbind %
 
 # Allow copy-n-paste to system clipboard
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# Custom Resizing
+bind-key v resize-pane -x 126
+bind-key V resize-pane -x 253
 
 # Visual Styling #######################################################################################################
 
