--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,7 +1,26 @@
 # Basic Setup ##########################################################################################################
 
+set -g default-terminal "screen-256color"
+set -g status-keys vi
+set -g status-interval 2
+set -g status-position top
+set -sg escape-time 0
+
 setw -g mode-keys vi
 set -g mouse on
+
+set -g base-index 1 # 0 is too far from ` ;)
+
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+
+# loud or quiet?
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-window-option -g monitor-activity off
+set-option -g bell-action none
 
 # Keybindings ##########################################################################################################
 
@@ -17,17 +36,42 @@ bind-key r source-file ~/.tmux.conf
 # Add keybindings for pane movement
 unbind-key C-l
 
-bind-key -r C-k select-pane -U
-bind-key -r C-j select-pane -D
-bind-key -r C-h select-pane -L
-bind-key -r C-l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Add keybindings for pane resizing
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
+
+bind-key M-j resize-pane -D
+bind-key M-k resize-pane -U
+bind-key M-h resize-pane -L
+bind-key M-l resize-pane -R
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
 # Bindings for history management
 bind-key BSpace send-keys C-l \; clear-history
 
 # Bindings for splitting
-bind-key | split-window -h
-bind-key - split-window -v
+bind-key v split-window -h
+bind-key s split-window -v
 unbind '"'
 unbind %
 
@@ -41,88 +85,67 @@ bind-key V resize-pane -x 253
 
 # Visual Styling #######################################################################################################
 
-# panes
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
+#
+# Powerline Orange Block - Tmux Theme
+# Created by Jim Myhrberg <contact@jimeh.me>.
+#
+# Inspired by vim-powerline: https://github.com/Lokaltog/powerline
+#
+# Requires terminal to be using a powerline compatible font, find one here:
+# https://github.com/Lokaltog/powerline-fonts
+#
 
-## Status bar design
-# status line
-set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
-set -g status-interval 2
+# Status update interval
+set -g status-interval 1
 
-# messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
+# Basic status bar colors
+set -g status-style fg=colour240,bg=colour233
 
-#window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
+# Left side of status bar
+set -g status-left-style bg=colour233,fg=colour243
+set -g status-left-length 40
+set -g status-left "#[fg=colour232,bg=colour130,bold] #S #[fg=colour130,bg=colour240,nobold]#[fg=colour233,bg=colour240] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
 
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
+# Right side of status bar
+set -g status-right-style bg=colour233,fg=colour243
+set -g status-right-length 150
+set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] #H "
 
-# Info on left (I don't have a session display for now)
-set -g status-left ''
+# Window status
+set -g window-status-format " #I:#W#F "
+set -g window-status-current-format " #I:#W#F "
 
-# loud or quiet?
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-window-option -g monitor-activity off
-set-option -g bell-action none
+# Current window status
+set -g window-status-current-style bg=colour130,fg=colour232
 
-set -g default-terminal "screen-256color"
+# Window with activity status
+set -g window-status-activity-style bg=colour233,fg=colour130
 
-# The modes
-setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
+# Window separator
+set -g window-status-separator ""
 
-# The panes
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
+# Window status alignment
+set -g status-justify centre
 
-# The statusbar
-set -g status-position top
-set -g status-bg colour234
-set -g status-fg colour137
-set -g status-attr dim
-set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] %Y-%m-%d #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 20
+# Pane border
+set -g pane-border-style bg=default,fg=colour238
 
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+# Active pane border
+set -g pane-active-border-style bg=default,fg=colour130
 
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+# Pane number indicator
+set -g display-panes-colour colour233
+set -g display-panes-active-colour colour245
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+# Clock mode
+set -g clock-mode-colour colour130
+set -g clock-mode-style 24
 
-# The messages
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
+# Message
+set -g message-style bg=colour130,fg=black
+
+# Command message
+set -g message-command-style bg=colour233,fg=black
+
+# Mode
+set -g mode-style bg=colour130,fg=colour232
