--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -70,8 +70,8 @@ bind -n S-Right next-window
 bind-key BSpace send-keys C-l \; clear-history
 
 # Bindings for splitting
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key | split-window -h
+bind-key - split-window -v
 unbind '"'
 unbind %
 
@@ -109,7 +109,7 @@ set -g status-left "#[fg=colour232,bg=colour130,bold] #S #[fg=colour130,bg=colou
 # Right side of status bar
 set -g status-right-style bg=colour233,fg=colour243
 set -g status-right-length 150
-set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] #H "
+set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] #H #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] %H:%M:%S "
 
 # Window status
 set -g window-status-format " #I:#W#F "
