--- a/home/.config/tmuxinator/stemma-term.yml
+++ b/home/.config/tmuxinator/stemma-term.yml
@@ -1,7 +1,7 @@
 # /Users/andrewminer/.config/tmuxinator/stemma-term.yml
 
 name: stemma-term
-root: /src/stemma/frontend/amundsen_application/static/
+root: ~/src/stemma/frontend/amundsen_application/static/
 
 startup_window: terminal
 
