--- a/home/.config/tmuxinator/stemma.yml
+++ b/home/.config/tmuxinator/stemma.yml
@@ -1,21 +1,31 @@
 # /Users/andrewminer/.config/tmuxinator/stemma.yml
 
 name: stemma
-root: /src/stemma
+root: ~/src/stemma
 
 startup_window: terminal
 
 windows:
-  - neo4j: docker-compose -f frontend/docker-compose.yml up neo4j
-  - elasticsearch: docker-compose -f frontend/docker-compose.yml up elasticsearch
+  - neo4j:
+      root: ~/src/stemma/frontend
+      panes: docker-compose -f docker-compose.yml up neo4j
+  - elasticsearch:
+      root: ~/src/stemma/frontend
+      panes: docker-compose -f docker-compose.yml up elasticsearch
+  - postgresql:
+      root: ~/src/stemma/api/persistence
+      panes: docker-compose -f docker-compose.yml up postgres
+  - graphql:
+      root: ~/src/stemma/api/persistence
+      panes: make dev
   - databuilder:
-      root: /src/stemma/databuilder
-      panes: source venv/bin/activate
+      root: ~/src/stemma/databuilder
+      panes: source .venv/bin/activate
   - webpack:
-      root: /src/stemma/frontend/amundsen_application/static
+      root: ~/src/stemma/frontend/amundsen_application/static
       panes: nvm use && npm run watch
   - server:
-      panes: ./server.sh
-      root: /src/stemma/frontend
+      panes: make dev
+      root: ~/src/stemma/frontend
   - editor: vim
   - terminal:
